Fix output wrapping for admin panel Console Logs pane Add syntax highlighting to Console Logs pane (mcarter and mgh)

--- a/hookbox/admin/static/highlighter.css
+++ b/hookbox/admin/static/highlighter.css
@@ -1,5 +1,4 @@
 .highlight .hll { background-color: #ffffcc }
-.highlight  { background: #f8f8f8; }
 .highlight .c { color: #408080; font-style: italic } /* Comment */
 .highlight .err { border: 1px solid #FF0000 } /* Error */
 .highlight .k { color: #008000; font-weight: bold } /* Keyword */
